Improved logic of service by adding @Transactional methods, also added new GET-method.
